fixed about me animation and text overlap

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,6 +1,6 @@
 .text-zone {
   position:absolute;
-  margin-left: 175px;
+  margin-left: 100px;
   top: 50%;
   transform: translateY(-50%);
   width: 50%;
@@ -19,7 +19,7 @@
  
   .cubespinner {
     animation-name: spincube;
-    animation-timing-function: ease-in-out;
+    animation-timing-function:ease-in-out;
     animation-iteration-count: infinite;
     animation-duration: 12s;
     transform-style: preserve-3d;
@@ -28,8 +28,8 @@
  
     div {
       position: absolute;
-      width: 200px;
-      height: 200px;
+      width: 100px;
+      height: 100px;
       border: 1px solid #ccc;
       background: rgba(255, 255, 255, 0.4);
       text-align: center;
